--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ geopandas = "^1.1.1"
 rioxarray = "^0.17.0"
 scikit-image = "^0.25.2"
 scipy = "^1.16.0"
+xarray = "^2025.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
