--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,18 @@ authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-numba = "^0.61.2"
+python = ">=3.12,<3.14"
+numba = "^0.62.1"
 geopandas = "^1.1.1"
-rioxarray = "^0.17.0"
+rioxarray = "^0.19.0"
 scikit-image = "^0.25.2"
 scipy = "^1.16.0"
 xarray = "^2025.7.0"
-
+streamkit = { git = "ssh://git@github.com/avkoehl/streamkit.git", branch = "main" }
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^9.4.0"
 matplotlib = "^3.10.3"
-streamtools = { git = "ssh://git@github.com/avkoehl/streamtools.git", branch = "main" }
 
 [build-system]
 requires = ["poetry-core"]
