--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scipy = "^1.16.0"
 xarray = "^2025.7.0"
 streamkit = { git = "ssh://git@github.com/avkoehl/streamkit.git", branch = "main" }
 xarray-spatial = "^0.4.0"
+dask = "^2025.10.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^9.4.0"
